# spreading-operator

./: .gitignore  Cargo.toml  Dockerfile
src/: finalizer.rs  main.rs
